// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Coverage > renders ScrollShadow component without children and className 1`] = `
<div
  class="overflow-y-auto data-[top-scroll=true]:[mask-image:linear-gradient(0deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[bottom-scroll=true]:[mask-image:linear-gradient(180deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[top-bottom-scroll=true]:[mask-image:linear-gradient(#000,#000,transparent_0,#000_var(--scroll-shadow-size),#000_calc(100%_-_var(--scroll-shadow-size)),transparent)]"
  data-bottom-scroll="false"
  data-orientation="vertical"
  data-top-scroll="false"
  style="--scroll-shadow-size: 40px;"
/>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    class="overflow-y-auto data-[top-scroll=true]:[mask-image:linear-gradient(0deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[bottom-scroll=true]:[mask-image:linear-gradient(180deg,#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] data-[top-bottom-scroll=true]:[mask-image:linear-gradient(#000,#000,transparent_0,#000_var(--scroll-shadow-size),#000_calc(100%_-_var(--scroll-shadow-size)),transparent)] w-[300px] h-[400px]"
    data-bottom-scroll="false"
    data-orientation="vertical"
    data-top-scroll="false"
    style="--scroll-shadow-size: 40px;"
  >
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
    <div>
      too much content
    </div>
  </div>
</div>
`;
